# ALSE_ejercicios_20

./: README.md
Ejercicio1_ALSE2020/: circulo.cpp  circulo.h  cuadrado.cpp  geometrica.cpp  main.cpp  triangulo.h
Ejercicio2/: CMakeLists.txt  entrada.txt  geometrica.h  main.cpp  pentagono.h
Geometrica/: CMakeLists.txt  cuadrado.h  main.cpp  pentagono.cpp  triangulo.cpp
Geometrica/ejec/: CMakeCache.txt  Geometrica  cmake_install.cmake
MiPrimerBasedeDatos/: covid_19  covid_19.sqbpro
TareaP3/: CMakeCache.txt  CMakeLists.txt  Makefile  archivo.txt  cmake_install.cmake  main.cpp
TareaP3b/: CMakeCache.txt  CMakeLists.txt  Makefile  archivo.txt  cmake_install.cmake  ejec  main.cpp
